apps/hello-world/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: hello-world
  annotations:
    cert-manager.io/cluster-issuer: le-staging
    external-dns.alpha.kubernetes.io/hostname: hello.aethericforge.ca
    external-dns.alpha.kubernetes.io/ttl: "300"
    external-dns.alpha.kubernetes.io/target: hello.aethericforge.ca
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: nginx-public
  tls:
    - hosts:
        - hello.aethericforge.ca
      secretName: hello-tls
  rules:
    - host: hello.aethericforge.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
